- Change: Always allow a none rendering of configuration settings.
- Change: Streamlined the return type of the
  retrieveDeclaringReflection of class methods.
- Change: Simplified the rendering of the plugin list.
- Change: Moved the scalar analysis to a more appropriate
  namespace.
- Change: Split the variable name cleanup into its own class.
- Change: Moved the Opaque Ressource Class analysis into its own class.

4.1.9
- Added Support for the PHP 8 cUrl handle class.

4.1.8
- Added support for PHP 8.2.
- Bugfix: Added missing double escaping to the code generation.
- Bugfix: Add Backslashes to quotation marks of generated source.

4.1.7
- Bugfix: Removed a faulty 'use' doc comment.
- Bugfix: Use the correct method signature for the error handler
  callback.
- Bugfix: Fixed the BOM detection in property names.
- Bugfix: Prevent a second the JS initialization if the hosting
  cms thinks that calling 'DOMContentLoaded' more than once is a
  good idea.
- Bugfix: Prevent a type hint for none variables.
- Bugfix: Add the missing file path filter to the backtrace
  analysis.
- Bugfix: Fix the handling of the 8.1 Enum as a default value in
  the source generation.

4.1.6
- Bugfix: Added the missing path filter to the real path resolver.
- Bugfix: Use strict encoding detection for strings for more
  reliable results.
- Bugfix: Fetch traversable data as soon as possible, because we do
  not want other analysis methods fetch traversable results, that
  are only fetchable once. DB results are a good example for this.

4.1.5
- Bugfix: Unnecessary uri encoding in the smoky grey skin prevents
  the display of certain additional info values.
- Bugfix: Prevent an overflow in the additional info of the smoky
  grey skin.

4.1.4
- Added support for readonly properties
- Bugfix: Correctly identify uninitialized properties.
- Bugfix: Prevent unnecessary filesystem calls in the filepath
  analysis.

4.1.3
- Added microtime analysis to the float routing.