@@ -40,7 +40,9 @@
 - Change: Moved the scalar analysis to a more appropriate
   namespace.
 - Change: Split the variable name cleanup into its own class.
-- Change: Moved the Opaque Ressource Class analysis into its own class.
+- Change: Moved the Opaque Ressource Class analysis into its own
+  class.
+- Change: The max count of analysed backtrace steps is set to 15.
 
 4.1.9
 - Added Support for the PHP 8 cUrl handle class.
